kube/ckad/github/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - readinessProbe: 
      httpGet:
        path: /
        port: 80
    livenessProbe:
      initialDelaySeconds: 5
      periodSeconds: 5
      exec:
        command: [ "ls" ]
    image: nginx
    name: nginx
    ports: 
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
